--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,13 +9,16 @@ galaxy_info:
   platforms:
     - name: EL
       versions:
-        - all
+        - 7
+        - 8
     - name: Fedora
       versions:
-        - all
+        - 31
+        - 32
     - name: Ubuntu
       versions:
-        - all
+        - bionic
+        - xenial
     - name: Alpine
       versions:
         - all
@@ -25,7 +28,6 @@ galaxy_info:
     - name: Debian
       versions:
         - buster
-        - jessie
         - stretch
   galaxy_tags:
     - development
