--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,18 +7,6 @@ galaxy_info:
     - MIT
   min_ansible_version: 2.0
   platforms:
-    - name: EL
-      versions:
-        - 7
-        - 8
-    - name: Fedora
-      versions:
-        - 31
-        - 32
-    - name: Ubuntu
-      versions:
-        - bionic
-        - xenial
     - name: Alpine
       versions:
         - all
@@ -29,6 +17,22 @@ galaxy_info:
       versions:
         - buster
         - stretch
+    - name: EL
+      versions:
+        - 7
+        - 8
+    - name: Fedora
+      versions:
+        - 31
+        - 32
+    - name: Gentoo
+      versions:
+        - all
+    - name: Ubuntu
+      versions:
+        - bionic
+        - focal
+        - xenial
   galaxy_tags:
     - development
   role_name: yq
