--- a/test.yml
+++ b/test.yml
@@ -2,3 +2,9 @@
 - hosts: all
   roles:
   - role: '{{ playbook_dir }}'
+  tasks:
+  - command: /usr/local/bin/yq --version
+    register: yq_test_output
+  - name: yq --version
+    debug:
+      msg: '{{ yq_test_output.stdout }}'
